--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
         };
         // make API call with parameters and use promises to get response
         fetch(
-          'https://e7il6vv903.execute-api.us-east-1.amazonaws.com/DEV',
+          'https://lhku920h9d.execute-api.us-east-1.amazonaws.com',
           requestOptions
         )
           .then((response) => response.json())
@@ -45,7 +45,7 @@
       // fetchRatings function that fetches all book ratings and displays them as an unordered list
       var fetchRatings = () => {
         // make GET request to API endpoint to retrieve all ratings
-        fetch('https://e7il6vv903.execute-api.us-east-1.amazonaws.com/DEV')
+        fetch('https://lhku920h9d.execute-api.us-east-1.amazonaws.com')
           .then((response) => response.json())
           .then((data) => {
             // get reference to unordered list
