--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
         };
         // make API call with parameters and use promises to get response
         fetch(
-          '${api_url}',
+          'https://kpci08krah.execute-api.us-east-1.amazonaws.com/dev/',
           requestOptions
         )
           .then((response) => response.json())
@@ -45,7 +45,7 @@
       // fetchRatings function that fetches all book ratings and displays them as an unordered list
       var fetchRatings = () => {
         // make GET request to API endpoint to retrieve all ratings
-        fetch('${api_url}')
+        fetch('https://kpci08krah.execute-api.us-east-1.amazonaws.com/dev/')
           .then((response) => response.json())
           .then((data) => {
             // get reference to unordered list
