i really don't know anymore

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -20,6 +20,7 @@
         // create a JSON object with parameters for API call and store in a variable
         var requestOptions = {
           method: 'POST',
+          mode: "cors",
           headers: myHeaders,
           body: raw,
           redirect: 'follow',
