--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,6 +10,7 @@
 
     <script>
       // callAPI function that takes the book and rating numbers as parameters
+      var url = 'https://ms6mkt0o86.execute-api.us-east-1.amazonaws.com/dev/'
       var callAPI = (book, rating) => {
         // instantiate a headers object
         var myHeaders = new Headers();
@@ -27,7 +28,7 @@
         };
         // make API call with parameters and use promises to get response
         fetch(
-          'https://0dwuy834c3.execute-api.us-east-1.amazonaws.com/dev/',
+          url,
           requestOptions
         )
           .then((response) => response.json())
@@ -46,7 +47,7 @@
       // fetchRatings function that fetches all book ratings and displays them as an unordered list
       var fetchRatings = () => {
         // make GET request to API endpoint to retrieve all ratings
-        fetch('https://0dwuy834c3.execute-api.us-east-1.amazonaws.com/dev/', {
+        fetch(url, {
           method: "GET",
           mode: "cors",
           headers: {
