--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,7 +10,7 @@
 
     <script>
       // callAPI function that takes the book and rating numbers as parameters
-      var url = 'https://3lh5b3yzu4.execute-api.us-east-1.amazonaws.com/dev/'
+      var url = 'https://cry64j629c.execute-api.us-east-1.amazonaws.com/DEV'
       var callAPI = (book, rating) => {
         // instantiate a headers object
         var myHeaders = new Headers();
