think i finally figured it out

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -57,7 +57,7 @@
             data.forEach((rating) => {
               var li = document.createElement('li');
               li.appendChild(
-                document.createTextNode(rating.book + ': ' + rating.rating)
+                document.createTextNode(rating.book + ': ' + rating.Rating)
               );
               ul.appendChild(li);
             });
