--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,7 +10,7 @@
 
     <script>
       // callAPI function that takes the book and rating numbers as parameters
-      var url =  '{{api_url}}' + '/method'
+      var url =  'https://9to766c1j6.execute-api.us-east-1.amazonaws.com/dev/method' + '/method'
       var callAPI = (book, rating) => {
         // instantiate a headers object
         var myHeaders = new Headers();
