changes to index.html

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -28,7 +28,7 @@
         // make API call with parameters and use promises to get response
         fetch(
           url,
-          'https://lhku920h9d.execute-api.us-east-1.amazonaws.com/dev/',
+          'https://9to766c1j6.execute-api.us-east-1.amazonaws.com/dev/method',
           requestOptions
         )
           .then((response) => response.json())
@@ -48,7 +48,7 @@
       var fetchRatings = () => {
         // make GET request to API endpoint to retrieve all ratings
         fetch(url)
-        fetch('https://lhku920h9d.execute-api.us-east-1.amazonaws.com/dev/')
+        fetch('https://9to766c1j6.execute-api.us-east-1.amazonaws.com/dev/method')
           .then((response) => response.json())
           .then((data) => {
             // get reference to unordered list
