--- a/src/app/index.html
+++ b/src/app/index.html
@@ -98,7 +98,8 @@
         </button>
       </div>
     </form>
-	<img src="library.jpeg" alt="" style="float:right;width:600px;height:600px;padding:45px;" />
+    <br>
+	<img src="library.jpeg" alt="" style="float:right;width:500px;height:500px;margin-right:150px;" />
     <div class="list" style="border:2px solid #86c232;">
 	<h2>Current Ratings</h2>
       <ul id="ratings"></ul>
