changes to about.html

--- a/src/app/about.html
+++ b/src/app/about.html
@@ -8,14 +8,23 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
+<style>
+  img {
+	position:absolute;
+	left: 4%;
+	top: 27%;
+}
+</style>
 <body>
 <div class="header">
-	<h1 onmouseover="style.color='blue'" onmouseout="style.color='white'">We Are Team Cypress</h1>
+	<h1 onmouseover="style.color='#86c232'" onmouseout="style.color='white'">Meet Team Cypress</h1>
 </div>
 <ul class="nav_menu">
 	<li><a href="index.html">Home</a></li>
 	<li class="nav_menu_right"><a class="active" href="about.html">About</a></li>
 </ul>
+<img src="teamcypress.jpeg" alt="Team Cypress" style="width:400px;height:300px" />
+
 
 </body>
 </html>
