--- a/src/app/index.html
+++ b/src/app/index.html
@@ -70,7 +70,7 @@
   </head>
   <body>
     <div class="header">
-      <h1 onmouseover="style.color='blue'" onmouseout="style.color='white'">Rate Your VetTec Program!</h1>
+      <h1 onmouseover="style.color='#86c232'" onmouseout="style.color='white'">Rate Your VetTec Program!</h1>
 	  	<img src="books.png" alt="" />
     </div>
 	<ul class="nav_menu">
@@ -101,7 +101,7 @@
     <br>
 	<img src="library.jpeg" alt="" style="float:right;width:500px;height:500px;margin-right:150px;" />
     <div class="list" style="border:2px solid #86c232;">
-	<h2>Current Ratings</h2>
+	    <h2>Current Ratings</h2>
       <ul id="ratings"></ul>
     </div>
 
