--- a/src/app/about.html
+++ b/src/app/about.html
@@ -9,22 +9,89 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <style>
-  img {
-	position:absolute;
-	left: 4%;
-	top: 27%;
-}
+  p {
+    color: #ffffff;
+  }
 </style>
 <body>
-<div class="header">
-	<h1 onmouseover="style.color='#86c232'" onmouseout="style.color='white'">Meet Team Cypress</h1>
-</div>
+  <img class="center" src="teamcypress.jpeg" alt="Team Cypress" style="width:571px;height:102px" />
 <ul class="nav_menu">
 	<li><a href="index.html">Home</a></li>
 	<li class="nav_menu_right"><a class="active" href="about.html">About</a></li>
 </ul>
-<img src="teamcypress.jpeg" alt="Team Cypress" style="width:400px;height:300px" />
-
-
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="img1.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Alfred Brown</h2>
+        <p class="title">Scrum Leader &amp; DevOps Engineer</p>
+        <p>Primarily focused on maintaining Jira and establishing IAM Roles in Terraform.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="img2.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Aaron Parangan</h2>
+        <p class="title">DevOps Engineer</p>
+        <p>Primaryily focused on establishing Amplify and Jenkins.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>Cody Elzey</h2>
+        <p class="title">DevOps Engineer</p>
+        <p>Primarily focused on creating Lambda functions and initial webpage.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>Shane Condone</h2>
+        <p class="title">DevOps Engineer</p>
+        <p>Primarily focused on the DynamoDB table and Team Moral.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>Dean Baeten</h2>
+        <p class="title">DevOps Engineer</p>
+        <p>Primarily focused on establishing the REST API Gateway and webpage improvements.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>Matt Vroman</h2>
+        <p class="title">Solutions Architect</p>
+        <p>Helped guide the Team and encouraged us to strive for glory.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
