changes to about.html

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -99,7 +99,7 @@
       </div>
     </form>
     <br>
-	<img src="library.jpeg" alt="" style="float:right;width:500px;height:500px;margin-right:150px;" />
+	<img src="cypressbonsai.jpg" alt="" style="float:right;width:550px;height:550px;margin-right:150px;" />
     <div class="list" style="border:2px solid #86c232;">
 	    <h2>Current Ratings</h2>
       <ul id="ratings"></ul>
