--- a/src/app/about.html
+++ b/src/app/about.html
@@ -22,72 +22,72 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="img1.jpg" alt="Jane" style="width:100%">
+      <img src="al.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Alfred Brown</h2>
         <p class="title">Scrum Leader &amp; DevOps Engineer</p>
         <p>Primarily focused on maintaining Jira and establishing IAM Roles in Terraform.</p>
-        <p>example@example.com</p>
+        <p>Al.Brown@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
   </div>
   <div class="column">
     <div class="card">
-      <img src="img2.jpg" alt="Mike" style="width:100%">
+      <img src="aaron.jpg" alt="Mike" style="width:100%">
       <div class="container">
         <h2>Aaron Parangan</h2>
         <p class="title">DevOps Engineer</p>
         <p>Primaryily focused on establishing Amplify and Jenkins.</p>
-        <p>example@example.com</p>
+        <p>A.Parangan@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
   </div>
   <div class="column">
     <div class="card">
-      <img src="img3.jpg" alt="John" style="width:100%">
+      <img src="cody.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Cody Elzey</h2>
         <p class="title">DevOps Engineer</p>
         <p>Primarily focused on creating Lambda functions and initial webpage.</p>
-        <p>example@example.com</p>
+        <p>Cody.Elzey@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
   </div>
   <div class="column">
     <div class="card">
-      <img src="img3.jpg" alt="John" style="width:100%">
+      <img src="shane.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Shane Condone</h2>
         <p class="title">DevOps Engineer</p>
         <p>Primarily focused on the DynamoDB table and Team Moral.</p>
-        <p>example@example.com</p>
+        <p>Shane.Condone@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
   </div>
   <div class="column">
     <div class="card">
-      <img src="img3.jpg" alt="John" style="width:100%">
+      <img src="dean.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Dean Baeten</h2>
         <p class="title">DevOps Engineer</p>
         <p>Primarily focused on establishing the REST API Gateway and webpage improvements.</p>
-        <p>example@example.com</p>
+        <p>Dean.Baeten@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
   </div>
   <div class="column">
     <div class="card">
-      <img src="img3.jpg" alt="John" style="width:100%">
+      <img src="matt.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Matt Vroman</h2>
         <p class="title">Solutions Architect</p>
         <p>Helped guide the Team and encouraged us to strive for glory.</p>
-        <p>example@example.com</p>
+        <p>Matt.Vroman@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
