changes to photo size

--- a/src/app/about.html
+++ b/src/app/about.html
@@ -22,7 +22,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="al.jpg" alt="Jane" style="width:100%">
+      <img src="al.jpg" alt="Jane" style="width:50%;">
       <div class="container">
         <h2>Alfred Brown</h2>
         <p class="title">Scrum Leader &amp; DevOps Engineer</p>
@@ -34,7 +34,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="aaron.jpg" alt="Mike" style="width:100%">
+      <img src="aaron.jpg" alt="Mike" style="width:50%">
       <div class="container">
         <h2>Aaron Parangan</h2>
         <p class="title">DevOps Engineer</p>
@@ -46,7 +46,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="cody.jpg" alt="John" style="width:100%">
+      <img src="cody.jpg" alt="John" style="width:50%">
       <div class="container">
         <h2>Cody Elzey</h2>
         <p class="title">DevOps Engineer</p>
@@ -58,7 +58,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="shane.jpg" alt="John" style="width:100%">
+      <img src="shane.jpg" alt="John" style="width:50%">
       <div class="container">
         <h2>Shane Condone</h2>
         <p class="title">DevOps Engineer</p>
@@ -70,7 +70,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="dean.jpg" alt="John" style="width:100%">
+      <img src="dean.jpg" alt="John" style="width:50%">
       <div class="container">
         <h2>Dean Baeten</h2>
         <p class="title">DevOps Engineer</p>
@@ -82,7 +82,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="matt.jpg" alt="John" style="width:100%">
+      <img src="matt.jpg" alt="John" style="width:50%">
       <div class="container">
         <h2>Matt Vroman</h2>
         <p class="title">Solutions Architect</p>
