--- a/src/app/index.html
+++ b/src/app/index.html
@@ -71,7 +71,10 @@
       <h1>RATE YOUR VetTech Programs!</h1>
       <img src="books.png" alt="" />
     </div>
-
+    <ul class="nav_menu">
+      <li><a class="active" href="index.html">Home</a></li>
+      <li class="nav_menu_right"><a href="about.html">About</a></li>
+    </ul>
     <form>
       <div class="form-block">
         <label>VetTech Program:</label>
@@ -92,11 +95,12 @@
         </button>
       </div>
     </form>
-    <div class="list">
+    <br>
+    <img src="cypressbonsai.jpg" alt="" style="float:right;width:600px;height:600px;margin-right:10%;margin-top:2.5%;"/>
+    <div class="list" style="border:2px solid #86c232;">
+      <h2>Current Ratings:</h2>
       <ul id="ratings"></ul>
-      <img src="library.jpeg" alt="" />
     </div>
-
     <!-- Add script tag to call fetchRatings when the page loads -->
     <script>
       window.onload = function () {
