--- a/src/app/index.html
+++ b/src/app/index.html
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>RATE YOUR VetTech Programs!</h1>
+      <h1 onmouseover="style.color='#0063FB'" onmouseout="style.color='#FF8500'">RATE YOUR VetTech Programs!</h1>
       <img src="books.png" alt="" />
     </div>
     <ul class="nav_menu">
