changed onmouseout color

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="header">
-      <h1 onmouseover="style.color='#86c232'" onmouseout="style.color='#0063FB'">Rate Your VetTec Program!</h1><!--Rate Your VA Programs!-->
+      <h1 onmouseover="style.color='#86c232'" onmouseout="style.color='white'">Rate Your VetTec Program!</h1><!--Rate Your VA Programs!-->
       <img src="books.png" alt="" />
     </div>
     <ul class="nav_menu">
