--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -100,6 +100,10 @@ input {
   justify-content: space-around;
   margin: 50px auto;
 }
+.list div {
+  border: 3px solid #86c232;
+  padding: 0 10px;
+}
 .list img {
   object-fit: cover;
   width: 300px;
