--- a/src/app/about.html
+++ b/src/app/about.html
@@ -54,7 +54,7 @@
         <div class="container">
           <h2>Cody Elzey</h2>
           <p class="title">DevOps Engineer</p>
-          <p>Primarily focused on creating Lambda functions and initial webpage.</p>
+          <p>Primarily focused on creating Lambda functions and troubleshooting Guru.</p>
           <p>Cody.Elzey@gmail.com</p>
           <p><button class="button">Contact</button></p>
         </div>
