--- a/src/app/about.html
+++ b/src/app/about.html
@@ -19,8 +19,8 @@
   <img class="center" src="teamcypress.jpeg" alt="Team Cypress" style="width:571px;height:102px" />
   <div class="div_box">
 
-    <span><a class="home" href="index.html">Home</a></span>
-    <span class="about"><a href="about.html">About</a></span>
+    <span><a class="inactive" href="index.html">Home</a></span>
+    <span class="active"><a href="about.html">About</a></span>
 
   </div>
   <div class="row">
