--- a/src/app/index.html
+++ b/src/app/index.html
@@ -76,8 +76,8 @@
   </div>
   <div class="div_box">
 
-    <span><a class="home" href="index.html">Home</a></span>
-    <span class="about"><a href="about.html">About</a></span>
+    <span><a class="active" href="index.html">Home</a></span>
+    <span class="inactive"><a href="about.html">About</a></span>
 
   </div>
 
