--- a/src/app/about.html
+++ b/src/app/about.html
@@ -26,7 +26,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="al.jpg" alt="Jane" style="width:50%;">
+        <img src="al.jpg" alt="Jane" style="width:50%; justify-content: center;">
         <div class="container">
           <h2>Alfred Brown</h2>
           <p class="title">Scrum Leader &amp; DevOps Engineer</p>
