--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -182,6 +182,10 @@ html {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
 }
 
 .container {
