--- a/src/app/index.html
+++ b/src/app/index.html
@@ -76,7 +76,7 @@
   </div>
   <div class="div_box">
 
-    <span><a class="active" href="index.html">Home</a></span>
+    <span class="active"><a href="index.html">Home</a></span>
     <span class="inactive"><a href="about.html">About</a></span>
 
   </div>
