--- a/src/app/about.html
+++ b/src/app/about.html
@@ -67,7 +67,7 @@
           <h2>Shane Condone</h2>
           <p class="title">DevOps Engineer</p>
           <p>Primarily focused on the DynamoDB table and Team Moral.</p>
-          <p>Shane.Condone@gmail.com</p>
+          <p>Shane.Condone1@gmail.com</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
