--- a/src/app/index.html
+++ b/src/app/index.html
@@ -70,7 +70,7 @@
 
 <body>
   <div class="header">
-    <h1 onmouseover="style.color='#86c232'" onmouseout="style.color='white'">Rate Your VetTec Program!</h1>
+    <h1 onmouseover="style.color='#86c232'" onmouseout="style.color='blue'">Rate Your VetTec Program!</h1>
     <!--Rate Your VA Programs!-->
     <img src="books.png" alt="" />
   </div>
